# file_concatenator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/file_concatenator/: __init__.py  cli.py  core.py
