[project]
name = "file_concatenator"
version = "1.0.4"
description = "Convert directory structure and file contents to a single Markdown file"
readme = "README.md"
authors = [
    {name = "zhao", email = "649038269@qq.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "markitdown[all]>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dir-to-md"
Repository = "https://github.com/yourusername/dir-to-md"
Issues = "https://github.com/yourusername/dir-to-md/issues"

# 关键：定义命令行入口点
[project.scripts]
file_concatenator = "file_concatenator.cli:main"

# 构建配置
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 工具配置
[tool.hatch.build.targets.wheel]
packages = ["src/file_concatenator"]

[tool.ruff]
target-version = "py312"
line-length = 128
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 128
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "build>=1.4.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
